<resources>
    <string name="app_name">Krishivalah</string>
    <string name="create_account">Create Account</string>
    <string name="phone_number">Phone Number</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="login">Log In</string>
    <string name="pin_hint">123456</string>
    <string name="submit">Submit</string>
    <string name="welcome">Welcome</string>
    <string name="weather">Weather</string>
    <string name="camera">Camera</string>
    <string name="Detection">Detection</string>
</resources>